@@ -4,7 +4,7 @@
  * LEIDEN OPEN VARIATION DATABASE (LOVD)
  *
  * Created     : 2010-12-21
- * Modified    : 2011-11-25
+ * Modified    : 2011-12-01
  * For LOVD    : 3.0-alpha-07
  *
  * Copyright   : 2004-2011 Leiden University Medical Center; http://www.LUMC.nl/
@@ -101,7 +101,7 @@ if (!empty($_PATH_ELEMENTS[1]) && ctype_digit($_PATH_ELEMENTS[1]) && !ACTION) {
     lovd_printHeader('Variants', 'H4');
     require ROOT_PATH . 'class/object_transcript_variants.php';
     $_DATA = new LOVD_TranscriptVariant($zData['geneid']);
-    $_DATA->viewList(false, array('id', 'transcriptid'));
+    $_DATA->viewList(false, array('id', 'transcriptid', 'id_ncbi'));
 
     require ROOT_PATH . 'inc-bot.php';
     exit;
