@@ -4,8 +4,8 @@
  * LEIDEN OPEN VARIATION DATABASE (LOVD)
  *
  * Created     : 2010-01-14
- * Modified    : 2011-11-09
- * For LOVD    : 3.0-alpha-06
+ * Modified    : 2011-12-02
+ * For LOVD    : 3.0-alpha-07
  *
  * Copyright   : 2004-2011 Leiden University Medical Center; http://www.LUMC.nl/
  * Programmers : Ing. Ivo F.A.C. Fokkema <I.F.A.C.Fokkema@LUMC.nl>
@@ -722,15 +722,15 @@ if (empty($_PATH_ELEMENTS[1]) && ACTION == 'register') {
 
         if (!lovd_error()) {
             // Fields to be used.
-            $aFields = array('name', 'institute', 'department', 'telephone', 'address', 'city', 'countryid', 'email', 'reference', 'username', 'password', 'password_force_change', 'level', 'allowed_ip', 'login_attempts', 'created_date');
+            $aFields = array('name', 'institute', 'department', 'telephone', 'address', 'city', 'countryid', 'email', 'reference', 'username', 'password', 'password_force_change', 'level', 'allowed_ip', 'login_attempts', 'last_login', 'created_date');
 
             // Prepare values.
             $_POST['password_force_change'] = 0;
             $_POST['password'] = lovd_createPasswordHash($_POST['password_1']);
             $_POST['level'] = LEVEL_SUBMITTER;
             $_POST['login_attempts'] = 0;
+            $_POST['last_login'] = $_POST['created_date'] = date('Y-m-d H:i:s');
             $_POST['created_by'] = NULL;
-            $_POST['created_date'] = date('Y-m-d H:i:s');
 
             $nID = $_DATA->insertEntry($_POST, $aFields);
 
